--- a/Frontend/stylecss/aboutus.css
+++ b/Frontend/stylecss/aboutus.css
@@ -132,7 +132,7 @@ body {
 }
 
 .faq ul li a {
-    color: #d70c0c;
+    color: #ce501a;
     text-decoration: none;
     transition: color 0.3s;
 }
