--- a/Frontend/stylecss/aboutus.css
+++ b/Frontend/stylecss/aboutus.css
@@ -184,3 +184,20 @@ body {
 .sale-button:hover {
     background-color: rgba(0, 255, 255, 0.314);
 }
+
+.back-to-top {
+    position: relative;
+    top: 50px;
+    left: 870px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border-color: #1a1a1a;
+    background-color: #9c9c9c;
+}
+
+.ti-arrow-up {
+    position: relative;
+    width: 30px;
+    height: 30px;
+}
