--- a/Frontend/stylecss/aboutus.css
+++ b/Frontend/stylecss/aboutus.css
@@ -15,7 +15,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Đưa background xuống lớp dưới cùng */
+    z-index: -1; 
 }
 
 .background img {
@@ -87,17 +87,17 @@ body {
 
 .nav-links {
     display: flex;
-    gap: 25px; /* Adjusted this value to increase the space between nav links */
+    gap: 25px; 
     margin-left: auto;
-    margin-right: 70px; /* Adjust this value to move the nav links to the left */
+    margin-right: 70px; 
 }
 
 .nav-links a {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px; /* Increased width */
-    height: 50px; /* Increased height */
+    width: 50px; 
+    height: 50px; 
     border-radius: 50%;
     background-color: #333;
     transition: background-color 0.3s;
@@ -108,8 +108,8 @@ body {
 }
 
 .nav-links img {
-    width: 30px; /* Increased width */
-    height: 30px; /* Increased height */
+    width: 30px; 
+    height: 30px; 
 }
 
 .content {
