--- a/Frontend/stylecss/style.css
+++ b/Frontend/stylecss/style.css
@@ -373,17 +373,24 @@ body{
 
 .chat-button {
     position: relative;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     border-radius: 30px;
     background-color: #3498db2a;
     color: #fff;
     border-color: #ffffff;
+    cursor: pointer;
 
 }
 
 .chat-button:hover {
-    background-color: #3498db;
+    background-color: #a10707;
     color: #fff;
     border-color: #ffffff;
+}
+
+.chatbot-logo {
+    position: absolute;
+    top: 3px;
+    left: 3px;
 }
