--- a/Frontend/stylecss/style.css
+++ b/Frontend/stylecss/style.css
@@ -109,6 +109,13 @@ body{
     color: #c71313;
 }
 
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
 .sidebar {
     grid-area: sidebar;
     position: fixed;
