--- a/Frontend/stylecss/style1.css
+++ b/Frontend/stylecss/style1.css
@@ -1,45 +1,87 @@
 .sign-in {
-  background-color: rgba(255, 255, 255, 1.0);
   display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
-.sign-in .overlap-wrapper {
-  background-color: rgba(255, 255, 255, 1.0);
-  background: linear-gradient(180deg, rgb(18, 4, 11) 57.5%, rgb(11, 2, 2) 100%);
-  width: 1440px;
-  height: 1024px;
-}
-
-.sign-in .overlap {
-  position: relative;
-  height: 1024px;
-}
-
-.sign-in .overlap-group {
+.sign-in .background {
   position: absolute;
-  width: 1440px;
-  height: 874px;
-  top: 150px;
-  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.sign-in .element {
-  position: absolute;
-  width: 1440px;
-  height: 857px;
-  top: 17px;
-  left: 0;
-  object-fit: cover;
+.sign-in .header {
+  grid-area: header;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 85px;
+    background: none;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    color: white;
+}
+
+@keyframes flickerGlow {
+  0% {
+      filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
+  }
+
+  50% {
+      filter: drop-shadow(0px 0px 20px rgb(177, 42, 42));
+  }
+
+  100% {
+      filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
+  }
+}
+
+.logo img {
+  height: 100px;
+  animation: flickerGlow 1s infinite alternate;
+}
+
+.aboutus {
+  display: flex;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold; 
+  gap: 8px; 
+  text-decoration: none; 
+  color: inherit;
+  right: 30px;
+  top: 20px;
+  position: absolute; 
+  transition: transform 0.2s;
+}
+
+.aboutus:hover {
+    transform: scale(1.2); 
+}
+
+.aboutus i {
+  font-size: 20px; 
+}
+
+.aboutus p {
+  margin: 0; 
+  font-size: 16px; 
 }
 
 .sign-in .frame {
   position: absolute;
-  width: 611px;
-  height: 702px;
-  top: 0;
+  width: 600px;
+  height: 670px;
+  top: 20px;
   left: 411px;
   background-color: #22222233;
   border-radius: 58px;
